--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+}
+
 body {
   margin: 0;
+  font-family: "Courier New",courier;
+
+  background: linear-gradient(90deg, rgba(20,96,171,1) 0%, rgba(50,41,227,1) 50%, rgba(145,0,255,1) 100%);
 }
